# apoch

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  Dockerfile.wandb  LICENSE  README.md  cv.py  docker.md  pyproject.toml  requirements.txt  ruff.toml  submit.py  train.py
.github/: CODEOWNERS
.github/workflows/: static-analysis.yml
conf/: README.md  cv.yaml  submit.yaml  train.yaml
conf/model/: mlp.yaml  run.yaml  test.yaml
conf/model/pipeline/: default.yaml
conf/models/: main.yaml
conf/sweep/: example_sweep.yaml
dashboard/: __init__.py  dash.yaml  run_dash.py
dashboard/eda/: __init__.py  dummy_time_series_visualizer.py  eda_layout.py  parquet_visualizer.py
data/raw/: main.py
data/raw/train_data/: dummy.npy
src/: README.md  __init__.py
src/config/: __init__.py  cv_config.py  submit_config.py  train_config.py  wandb_config.py
src/modules/: __init__.py
src/modules/logging/: __init__.py  logger.py
src/modules/training/: __init__.py  dummy_trainer.py  example_training_block.py  main_trainer.py  verbose_training_block.py  verbose_training_pipeline.py
src/modules/training/models/: __init__.py  mlp.py
src/modules/transformation/: __init__.py  example_transformation_block.py  verbose_transformation_block.py  verbose_transformation_pipeline.py
src/scoring/: __init__.py  accuracy.py  scorer.py
src/setup/: __init__.py  setup_data.py  setup_pipeline.py  setup_runtime_args.py  setup_wandb.py
src/typing/: __init__.py
src/utils/: __init__.py  lock.py  logger.py  set_torch_seed.py
submission/: download_models.py  manage_datasets.py  submission.csv
submission/config/: dependencies.json  source.json
