[project]
name = "apoch"
version = "1.0.0"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
    { name = "Ariel Ebersberger", email = "arielebersberger@gmail.com" },
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
    { name = "Hugo de Heer", email = "hugodeheer1234@gmail.com"},
    { name = "Emiel Witting", email = "emiel.witting@gmail.com"},
    { name = "Gregoire Dumont", email = "dumont.gregoire.a@gmail.com"},
    { name = "Kristóf Sandor", email = "emherk512@gmail.com"},
    { name = "Daniel De Dios Allegue", email = "danieldediosallegue@gmail.com"}
]
description = "Team Epoch's base application for competing in machine learning competitions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "epochalyst==0.3.7",
    "matplotlib>=3.9.0",
    "plotly>=5.18.0",
    "torch==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "torchaudio==2.3.1+cu121",
    "typing_extensions>=4.12.2",
    "annotated-types>=0.7.0",
    "hydra-core>=1.3.2",
    "wandb>=0.17.3",
    "randomname>=0.2.1",
    "coloredlogs>=15.0.1",
]

[project.scripts]
train = "train:run_train"
cv = "cv:run_cv"
submit = "submit:run_submit"

[project.urls]
Homepage = "https://teamepoch.ai"
Repository = "https://github.com/TeamEpochGithub/apoch"
Issues = "https://github.com/TeamEpochGithub/apoch/issues"

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "notebook>=7.2.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "kaggle>=1.6.14",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"

[tool.rye.scripts]
download-models = { call = "submission.download_models:download_models" }
manage-datasets = { call = "submission.manage_datasets:manage_datasets" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "external", "cv", "submit", "train"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
ignore = [
    "DOC103",  # Docstring arguments are different from function arguments. Too often a false positive.
]

[tool.mypy]
exclude = ["external/", "venv/", ".cache"]
allow_untyped_calls = true
disable_error_code = ["import-untyped"]

[tool.ruff]
extend-exclude = ["external/*"]
line-length = 175
fix = true
show-fixes = true
select = [
    "ALL",  # Every check supported by Ruff
]
ignore = [
    # pydocstyle (D)
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
     # eradicate (ERA)
    "ERA001",  # Found commented-out code
    # Pylint (PL)
    "PLR0913", # Too many arguments for function
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
    # flake8-annotations (ANN)
    "ANN101",  # Missing type annotation for self in method
    # flake8-errmsg (EM)
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    # flake8-future-annotations (FA)
    "FA",  # Missing from __future__ import annotations
    # flake8-fixme (FIX)
    "FIX001",  # Line contains FIXME
    "FIX002",  # Line contains TODO
    "FIX003",  # Line contains XXX
    "FIX004",  # Line contains HACK
    # pep8-naming (N)
    "N803",  # Argument name should be lowercase. Variable name "X" is very common in machine learning.
    "N806",  # Variable in function should be lowercase. Variable name "X" is very common in machine learning.
    # flake8-use-pathlib (PTH)
    "PTH",  # Use pathlib instead of os.path. Dask does not seem to like pathlib.
    # flake8-quotes (Q)
    "Q000",  # Single quotes found but double quotes preferred
    # flake8-simplify (SIM)
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    # flake8-type-checking (TCH)
    "TCH001",  # Move application import into a type-checking block. Breaks Sphinx autodoc (https://github.com/sphinx-doc/sphinx/issues/11225).
    "TCH002",  # Move third-party import into a type-checking block. Breaks Sphinx autodoc (https://github.com/sphinx-doc/sphinx/issues/11225).
    "TCH003",  # Move standard library import into a type-checking block. Breaks Sphinx autodoc (https://github.com/sphinx-doc/sphinx/issues/11225).
    # flake8-todos (TD)
    "TD003",  # Missing issue link on the line following this TODO
    # tryceratops (TRY)
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]


[tool.ruff.format]
docstring-code-format = true

# allow unsused **kwargs of type Any
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
