[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dashboard", "external", "src", "cv", "run_dashboard", "submit", "train"]

[project]
name = "apoch"
version = "0.0.1"
description = "Team Epoch's base application for competing in machine learning competitions"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Machine Learning Basics
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "tqdm>=4.66.1",
    "epochalyst==0.3.2",

    # Visualizations
    "seaborn>=0.13.0",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",

    # PyTorch
    "torch==2.1.2+cu118",
    "torchaudio==2.1.2+cu118",
    "torchvision==0.16.2+cu118",

    # Dash
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "dash-bootstrap-templates>=1.1.1",

    # pre-commit & MyPy
    "pre-commit>=3.6.0",
    "mypy>=1.7.1",
    "typing_extensions>=4.9.0",
    "annotated-types>=0.6.0",
    "pandas-stubs>=2.2.0.240218",
    "traitlets>=5.14.2",

    # Hydra
    "hydra-core>=1.3.2",

    # Weights & Biases
    "wandb>=0.16.2",
    "randomname>=0.2.1",

    # Logging
    "coloredlogs>=15.0.1",

    # Notebooks
    "notebook>=7.0.6",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",

]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"

[tool.rye.scripts]
download-models = { call = "submission.download_models:download_models" }
manage-datasets = { call = "submission.manage_datasets:manage_datasets" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "external", "cv", "submit", "train"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
ignore = [
    "DOC103",  # Docstring arguments are different from function arguments. Too often a false positive.
]
