[project]
name = "apoch"
version = "1.0.0"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
    { name = "Ariel Ebersberger", email = "arielebersberger@gmail.com" },
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
    { name = "Hugo de Heer", email = "hugodeheer1234@gmail.com"},
    { name = "Emiel Witting", email = "emiel.witting@gmail.com"},
    { name = "Gregoire Dumont", email = "dumont.gregoire.a@gmail.com"},
    { name = "Kristóf Sandor", email = "emherk512@gmail.com"},
    { name = "Daniel De Dios Allegue", email = "danieldediosallegue@gmail.com"}
]
description = "Team Epoch's base application for competing in machine learning competitions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "epochalyst==0.3.2",
    "matplotlib>=3.9.0",
    "plotly>=5.18.0",
    "torch==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "torchaudio==2.3.1+cu121",
    "typing_extensions>=4.12.2",
    "annotated-types>=0.7.0",
    "hydra-core>=1.3.2",
    "wandb>=0.17.3",
    "randomname>=0.2.1",
    "coloredlogs>=15.0.1",
]

[project.scripts]
train = "train:run_train"
cv = "cv:run_cv"
submit = "submit:run_submit"

[project.urls]
Homepage = "https://teamepoch.ai"
Repository = "https://github.com/TeamEpochGithub/apoch"
Issues = "https://github.com/TeamEpochGithub/apoch/issues"

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "notebook>=7.2.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "kaggle>=1.6.14",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"

[tool.rye.scripts]
download-models = { call = "submission.download_models:download_models" }
manage-datasets = { call = "submission.manage_datasets:manage_datasets" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "external", "cv", "submit", "train"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
ignore = [
    "DOC103",  # Docstring arguments are different from function arguments. Too often a false positive.
]
